crates/fec-cli/src/tui/snapshots/libfec__tui__committee_detail__tests__committee_detail_basic.snap
---
source: crates/fec-cli/src/tui/committee_detail.rs
expression: terminal.backend()
snapshot_kind: text
---
"FRIENDS OF DEMOCRACY PAC (C00401224)                                            "
"Committee ID: C00401224                                                         "
"                                                                                "
"Name: FRIENDS OF DEMOCRACY PAC                                                  "
"                                                                                "
"Treasurer: SMITH, JOHN Q                                                        "
"                                                                                "
"Address:                                                                        "
"  123 K Street NW                                                               "
"  Suite 400                                                                     "
"  Washington, DC 20001                                                          "
"                                                                                "
"Committee Type: Q - Qualified Non-Party (e.g. PAC)                              "
"Designation: B - Lobbyist/Registrant PAC                                        "
"Filing Frequency: Q - Quarterly                                                 "
"Connected Organization: DEMOCRACY CORP                                          "
"┌Filings for C00401224 - 2026 (0 filings)──────────────────────────────────────┐"
"│Filing ID      Form     Report               Coverage             Received    │"
"│Press 'f' to f                                                                │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"────────────────────────────────────────────────────────────────────────────────"
"                      Esc/q back  o open  y copy  f filings                     "
