crates/fec-cli/src/tui/snapshots/libfec__tui__committee_detail__tests__committee_detail_filings_loading.snap
---
source: crates/fec-cli/src/tui/committee_detail.rs
expression: terminal.backend()
snapshot_kind: text
---
"FRIENDS OF DEMOCRACY PAC (C00401224)                                            "
"Lobbyist/Registrant PAC                                                         "
"Files Quarterly                                                                 "
"Address:                                                                        "
"  123 K Street NW                                                               "
"  Suite 400                                                                     "
"  Washington, DC 20001                                                          "
"                                                                                "
"Connected Organization: DEMOCRACY CORP                                          "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"┌Filings for C00401224 (loading...)────────────────────────────────────────────┐"
"│Filing ID      Form     Report               Coverage             Received    │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"────────────────────────────────────────────────────────────────────────────────"
"           Esc/q back  j/k navigate  Enter view filing  y copy  o open          "
