crates/fec-cli/src/tui/snapshots/libfec__tui__committee_detail__tests__committee_detail_financial_summary_minimal.snap
---
source: crates/fec-cli/src/tui/committee_detail.rs
expression: terminal.backend()
snapshot_kind: text
---
"FRIENDS OF DEMOCRACY PAC (C00401224)                                            "
"Lobbyist/Registrant PAC                                                         "
"Files Quarterly                                                                 "
"┌Financial Summary──────────────────────────────┐                               "
"│ Total Receipts                      $50,000.00│                               "
"│ Total Disbursements                 $30,000.00│                               "
"│ Cash on Hand                        $20,000.00│                               "
"└───────────────────────────────────────────────┘                               "
"Address:                                                                        "
"  123 K Street NW                                                               "
"  Suite 400                                                                     "
"  Washington, DC 20001                                                          "
"                                                                                "
"Connected Organization: DEMOCRACY CORP                                          "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"┌Filings for C00401224 - 2026 (0 filings)──────────────────────────────────────┐"
"│Filing ID      Form     Report               Coverage             Received    │"
"│Press 'f' to f                                                                │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"────────────────────────────────────────────────────────────────────────────────"
"                      Esc/q back  o open  y copy  f filings                     "
