crates/fec-cli/src/tui/snapshots/libfec__tui__committee_detail__tests__committee_detail_wide_terminal.snap
---
source: crates/fec-cli/src/tui/committee_detail.rs
expression: terminal.backend()
snapshot_kind: text
---
"FRIENDS OF DEMOCRACY PAC (C00401224)                                                                                    "
"Committee ID: C00401224                                                                                                 "
"                                                                                                                        "
"Name: FRIENDS OF DEMOCRACY PAC                                                                                          "
"                                                                                                                        "
"Treasurer: SMITH, JOHN Q                                                                                                "
"                                                                                                                        "
"Address:                                                                                                                "
"  123 K Street NW                                                                                                       "
"  Suite 400                                                                                                             "
"  Washington, DC 20001                                                                                                  "
"                                                                                                                        "
"Committee Type: Q - Qualified Non-Party (e.g. PAC)                                                                      "
"Designation: B - Lobbyist/Registrant PAC                                                                                "
"Filing Frequency: Q - Quarterly                                                                                         "
"Connected Organization: DEMOCRACY CORP                                                                                  "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"┌Filings for C00401224 - 2026 (3 filings)──────────────────────────────────────────────────────────────────────────────┐"
"│   Filing ID      Form     Report               Coverage                                                  Received    │"
"│>> FEC-1234567    F3XN     YEAR-END             2025-07-01 - 2025-12-31                                   2026-01-31  │"
"│   FEC-1234566    F3XN     MID-YEAR             2025-01-01 - 2025-06-30                                   2025-07-31  │"
"│   FEC-1234500    F99      -                    -                                                         2025-03-15  │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────"
"                               Esc/q back  j/k navigate  Enter view filing  y copy  o open                              "
