crates/fec-cli/src/tui/snapshots/libfec__tui__committee_detail__tests__committee_detail_with_candidate.snap
---
source: crates/fec-cli/src/tui/committee_detail.rs
expression: terminal.backend()
snapshot_kind: text
---
"DOE FOR CONGRESS (C00703975)                                                    "
"Committee ID: C00703975                                                         "
"                                                                                "
"Name: DOE FOR CONGRESS                                                          "
"                                                                                "
"Treasurer: DOE, JANE A                                                          "
"                                                                                "
"Address:                                                                        "
"  456 Main Street                                                               "
"  Los Angeles, CA 90001                                                         "
"                                                                                "
"Committee Type: H - House                                                       "
"Designation: P - Principal Campaign Committee                                   "
"Party Affiliation: DEM                                                          "
"Filing Frequency: Q - Quarterly                                                 "
"                                                                                "
"┌Filings for C00703975 - 2026 (0 filings)──────────────────────────────────────┐"
"│Filing ID      Form     Report               Coverage             Received    │"
"│Press 'f' to f                                                                │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"────────────────────────────────────────────────────────────────────────────────"
"                      Esc/q back  o open  y copy  f filings                     "
