crates/fec-cli/src/tui/snapshots/libfec__tui__committee_detail__tests__committee_detail_with_financial_summary.snap
---
source: crates/fec-cli/src/tui/committee_detail.rs
expression: terminal.backend()
snapshot_kind: text
---
"FRIENDS OF DEMOCRACY PAC (C00401224)                                            "
"Lobbyist/Registrant PAC                                                         "
"Files Quarterly                                                                 "
"┌Financial Summary (thru 2025-12-31)────────────┐                               "
"│ Total Receipts                   $2,500,000.00│                               "
"│ Total Disbursements              $1,800,000.50│                               "
"│ Cash on Hand                       $700,000.25│                               "
"└───────────────────────────────────────────────┘                               "
"Address:                                                                        "
"  123 K Street NW                                                               "
"  Suite 400                                                                     "
"  Washington, DC 20001                                                          "
"                                                                                "
"Connected Organization: DEMOCRACY CORP                                          "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"┌Filings for C00401224 - 2026 (0 filings)──────────────────────────────────────┐"
"│Filing ID      Form     Report               Coverage             Received    │"
"│Press 'f' to f                                                                │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"────────────────────────────────────────────────────────────────────────────────"
"                      Esc/q back  o open  y copy  f filings                     "
