crates/fec-cli/src/tui/snapshots/libfec__tui__committee_detail__tests__committee_detail_with_yank_popup.snap
---
source: crates/fec-cli/src/tui/committee_detail.rs
expression: terminal.backend()
snapshot_kind: text
---
"FRIENDS OF DEMOCRACY PAC (C00401224)                                            "
"Lobbyist/Registrant PAC                                                         "
"Files Quarterly                                                                 "
"Address:                                                                        "
"  123 K Street NW                                                               "
"  Suite 400                                                                     "
"  Washington, DC 20001                                                          "
"                                                                                "
"Connected Organization: DEMOCRACY CORP                                          "
"                    ┌Copy to Clipboard─────────────────────┐                    "
"                    │Select what to copy:                  │                    "
"                    │                                      │                    "
"                    │>> Committee ID: C00401224            │                    "
"                    │   Committee Name: FRIENDS OF         │                    "
"                    │DEMOCRACY PAC                         │                    "
"                    │                                      │                    "
"┌Filings for C004012│↑/↓ or j/k navigate  Enter copy  Esc  │───────────────────┐"
"│Filing ID      Form│cancel                                │       Received    │"
"│Press 'f' to f     │                                      │                   │"
"│                   │                                      │                   │"
"│                   └──────────────────────────────────────┘                   │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"────────────────────────────────────────────────────────────────────────────────"
"                      Esc/q back  o open  y copy  f filings                     "
