crates/fec-cli/src/tui/snapshots/libfec__tui__committee_detail__tests__committee_detail_with_yank_popup_candidate.snap
---
source: crates/fec-cli/src/tui/committee_detail.rs
expression: terminal.backend()
snapshot_kind: text
---
"DOE FOR CONGRESS (C00703975)                                                    "
"Committee ID: C00703975                                                         "
"                                                                                "
"Name: DOE FOR CONGRESS                                                          "
"                                                                                "
"Treasurer: DOE, JANE A                                                          "
"                                                                                "
"Address:                                                                        "
"  456 Main Street                                                               "
"  Los Angeles, CA 90┌Copy to Clipboard─────────────────────┐                    "
"                    │Select what to copy:                  │                    "
"Committee Type: H - │                                      │                    "
"Designation: P - Pri│   Committee ID: C00703975            │                    "
"Party Affiliation: D│>> Candidate ID: H4CA12345            │                    "
"Filing Frequency: Q │   Committee Name: DOE FOR CONGRESS   │                    "
"                    │                                      │                    "
"┌Filings for C007039│↑/↓ or j/k navigate  Enter copy  Esc  │───────────────────┐"
"│Filing ID      Form│cancel                                │       Received    │"
"│Press 'f' to f     │                                      │                   │"
"│                   │                                      │                   │"
"│                   └──────────────────────────────────────┘                   │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"────────────────────────────────────────────────────────────────────────────────"
"                      Esc/q back  o open  y copy  f filings                     "
